--- a/style.css
+++ b/style.css
@@ -1,38 +1,93 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
-  margin: 16px 200px 0px 200px;
-  background-color: #f7f7f7;
+  background-color: #eaeaea;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 #container-principal {
   background-color: #ffffff;
-  padding: 10px 50px 40px 50px;
+  height: 500px;
+  width: 900px;
+  border: 3px solid black;
+  border-radius: 6px;
+}
+
+header {
+  background-color: #2b3e4d;
+  padding: 25px 0;
+  margin-bottom: 16px;
+  color: #adb9c6;
 }
 
 .titulo {
-  display: flex;
-  justify-content: center;
-  background-color: #2b3e4d;
+  text-align: center;
+  margin-bottom: 12px;  
 }
 
 .key-model {
-  background-color: #2b3e4d;
   display: flex;
   justify-content: center;
   gap: 16px;
 }
 
+.key-model label {
+  display: block;
+}
+
 .pergunta-box {
+  width: 90%;
+  margin: 0px auto;
   display: flex;
   gap: 16px;
+  margin-bottom: 16px;
+}
+
+.pergunta-box textarea {
+  padding: 6px;
+}
+
+.answer {
+  width: 90%;
+  display: block;
+  margin: 4px auto;
+  font-size: 16px;
+  font-weight: 600;
 }
 
 button {
-  margin: 50px 5px 0px 5px;
+  height: 40px;
   padding: 10px;
   border-radius: 4px;
+  align-self: end;
+}
+
+button:hover {
+  cursor: pointer; 
+}
+
+.resposta-box {
+  width: 90%;
+  margin: 0px auto;
+  padding: 30px;
+  background-color: #f1f1f1;
+  border-radius: 6px;
+}
+
+.resposta-box h3 {
+  margin-bottom: 4px;
 }
 
 .resposta-box p {
-  background-color: aliceblue;
-  padding: 5px 0px 50px 5px;
+  padding: 6px;
+  min-height: 100px;
+  background-color: #fff;
 }
