--- a/style.css
+++ b/style.css
@@ -17,20 +17,22 @@ body {
   background-color: #ffffff;
   height: 500px;
   width: 900px;
-  border: 3px solid black;
-  border-radius: 6px;
+  /* border: 3px solid black; */
+  border-radius: 8px;
 }
 
 header {
   background-color: #2b3e4d;
   padding: 25px 0;
   margin-bottom: 16px;
-  color: #adb9c6;
+  color: #b3c0c9;
+  border-top-left-radius: 8px;
+  border-top-right-radius: 8px;
 }
 
 .titulo {
   text-align: center;
-  margin-bottom: 12px;  
+  margin-bottom: 16px;  
 }
 
 .key-model {
@@ -41,13 +43,35 @@ header {
 
 .key-model label {
   display: block;
+  text-align: center;
+  margin-bottom: 6px;
+}
+
+.key-model input {
+  width: 300px;
+  height: 32px;
+  background-color: #42525f;
+  color: #b3c0c9;
+  outline: none;
+  border: 2px solid #677787;
+  border-radius: 4px;
+}
+
+.key-model select {
+  width: 200px;
+  height: 32px;
+  background-color: #42525f;
+  color: #b3c0c9;
+  outline: none;
+  border: 2px solid #677787;
+  border-radius: 4px;
 }
 
 .pergunta-box {
   width: 90%;
   margin: 0px auto;
   display: flex;
-  gap: 16px;
+  justify-content: space-between;
   margin-bottom: 16px;
 }
 
@@ -64,10 +88,13 @@ header {
 }
 
 button {
-  height: 40px;
-  padding: 10px;
-  border-radius: 4px;
+  width: 130px;
+  height: 48px;
   align-self: end;
+  color: #f1f1f1;
+  background-color: #2c9cd4;
+  border: none;
+  border-radius: 8px;
 }
 
 button:hover {
